--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -11,6 +11,8 @@ nav {
         text-align: center;
         left: 50%;
         transform: translateX(-50%);
+        -moz-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
         & li {
             display: inline-block;
             margin: 0 auto;
@@ -29,6 +31,8 @@ nav {
                     text-decoration: none;
                     font-weight: 500;
                     transform: scale(1.05);
+                    -moz-transform: scale(1.05);
+                    -ms-transform: scale(1.05);
                 }
                 &:visited {
                     text-decoration: none;
@@ -37,11 +41,15 @@ nav {
                     text-decoration: none;
                     font-weight: 500;
                     transform: scale(1.05);
+                    -moz-transform: scale(1.05);
+                    -ms-transform: scale(1.05);
                 }
                 &.active {
                     text-decoration: none;
                     font-weight: 500;
                     transform: scale(1.05);
+                    -moz-transform: scale(1.05);
+                    -ms-transform: scale(1.05);
                 }
             }
         }
